[tool.poetry]
name = "zhenxun_plugin_ddcheck"
version = "0.2"
description = "zhenxun_bot 成分姬插件"
authors = ["HibiKier <775757368@qq.com>"]
license = "AGPL"

[[tool.poetry.source]]
name = "ali"
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
nonebot-plugin-htmlrender = ">=0.0.4"
Jinja2 = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
